Add directorys - Setup the layouts

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts/navigate.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prototyp</title>
@@ -34,8 +35,8 @@
             <p>Mittwoch</p>
             <p>19.06.2023</p>
             <div class="overview-buttons">
-                <button>Schnell Buchung</button>
-                <button>Zeitplan</button>
+                <button id="quick-book-button">Schnell Buchung</button>
+                <button id="timeschedule-button">Zeitplan</button>
             </div>
         </div>
     </div>
